    - Removed key reversal to match latest conflux Zp byte ordering fix.
  * cmd/hockeypuck-load/main.go, hkp/requests.go, openpgp/add.go,
    openpgp/recon.go, openpgp/worker.go:
    - Fix off-by-one in drop, take flags of hockeypuck-load. Fix i386
      compile issue with max int.
    - Workaround some concurrency issues between adding keys, recon recovery,
      and incoming queries.

 -- Casey Marshall <casey.marshall@gmail.com>  Tue, 13 Aug 2013 22:01:09 -0500

hockeypuck (1.0~a2) precise; urgency=low

  [ Casey Marshall ]
  * Opening 1.0~a2 development
  * Replace MongoDB backend with PostgreSQL.
  * Makefile:
    - Update binary name.
  * debian/install, debian/manpages, instroot/usr/share/hockeypuck-
    mgo/scripts/fix-keywords.js, instroot/usr/share/man/man1/hockeypuck-
    mgo.1 => instroot/usr/share/man/man1/hockeypuck.1, === removed
    directory instroot/usr/share/hockeypuck-mgo, === removed directory
    instroot/usr/share/hockeypuck-mgo/scripts:
    - Updating packaging.
  * debian/control, scripts/crossbuild.sh:
    - Update golang build dependency version (1.1).
    - Fix crossbuild script target binary.
  * config.go, debian/copyright, debian/postinst, debian/upstart,
    hkp/router.go, instroot/etc/hockeypuck/hockeypuck.conf,
    instroot/usr/share/man/man1/hockeypuck.1, log.go, openpgp/pks.go,
    openpgp/responses.go, README, router.go:
    - Update installation, summary doc.
    - Some manpage fixes.
    - Update debian copyright attribution for third-party Go packages.
    - Create postgres user and database in debian postinst.
    - Update upstart to trigger off postgresql, fix binary name.
    - Do not leak error messages on HTTP error status codes. Be terse.
    - Update example configuration to new TOML format.
    - Fix go-toml keys in some settings.
    - go fmt
  * openpgp/schema.go:
    - Better explanation of UID/UAT creation timestamp.
    - Reorder alter table statements to allow for easier copy/paste into
      psql.